# mercury-settrie

./: CHANGELOG.md  LICENSE.txt  MANIFEST.in  RAM_USAGE.md  README.md  TODO.md  _custombuild.py  config.py  pyproject.toml  setup.py
mercury/: Doxyfile  Makefile  mkdocs.yml
mercury/settrie/: __init__.py  imports.py  py_settrie.i  py_settrie_wrap.c  st_main.cpp
notebooks/: settrie_benchmark.ipynb  settrie_benchmark_colab.ipynb
reference/html/: annotated.html  classSetTrie-members.html  classSetTrie.html  classes.html  dir_4334fa4a6841cd141a8942cce29f81cf.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_a.html  globals_b.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_f.html  globals_func.html  globals_g.html  globals_i.html  globals_m.html  globals_n.html  globals_p.html  globals_r.html  globals_s.html  globals_type.html  globals_vars.html  graph_legend.html  index.html  main_8dox.html  menudata.js  py__settrie__wrap_8cpp.html  py__settrie__wrap_8cpp__incl.map  py__settrie__wrap_8cpp__incl.md5  settrie_8cpp.html  settrie_8cpp__incl.map  settrie_8cpp__incl.md5  settrie_8h.html  settrie_8h__dep__incl.map  settrie_8h__dep__incl.md5  (+52 more)
reference/latex/: annotated.tex  classSetTrie.tex  dir_4334fa4a6841cd141a8942cce29f81cf.tex  files.tex  index.tex  main_8dox.tex  py__settrie__wrap_8cpp.tex  py__settrie__wrap_8cpp__incl.md5  refman.tex  settrie_8cpp.tex  settrie_8cpp__incl.md5  settrie_8h.tex  settrie_8h__dep__incl.md5  settrie_8h__incl.md5  settrie_8h_source.tex  st__main_8cpp.tex  st__main_8cpp__incl.md5  st__main_8h.tex  st__main_8h__dep__incl.md5  st__main_8h__incl.md5  st__main_8h_source.tex  structImageBlock.tex  structName.tex  structSetNode.tex  structSwigPyClientData.tex  structSwigPyObject.tex  structSwigPyObject__coll__graph.md5  structSwigPyPacked.tex  structSwigPyPacked__coll__graph.md5  structswig__cast__info.tex  structswig__cast__info__coll__graph.md5  structswig__const__info.tex  structswig__const__info__coll__graph.md5  structswig__globalvar.tex  structswig__globalvar__coll__graph.md5  structswig__module__info.tex  structswig__module__info__coll__graph.md5  structswig__type__info.tex  structswig__type__info__coll__graph.md5  structswig__varlinkobject.tex  (+1 more)
reference/python/: 404.html  index.html  objects.inv  sitemap.xml
source/: test_all.py
source/settrie/: Settrie.py  settrie.h
src/: DEVELOPMENT.md  Doxyfile  Makefile  test.sh  test_all.py  version.py
src/docs/: index.md
(+75 files in other folders)
