[build-system]
requires		= ['setuptools>=61.0']
build-backend	= 'setuptools.build_meta'


[project]
name			= 'mercury-settrie'
license			= {file = 'LICENSE.txt'}
version			= '1.4.1'
authors			= [{ name = 'Mercury Team', email = 'mercury.group@bbva.com' }]
description		= 'A SetTrie is a container of sets that performs efficient subset and superset queries.'
readme			= 'README.md'
requires-python	= '>=3.8'
classifiers		= [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
    'Operating System :: OS Independent',
]
keywords		= ['event detection', 'event prediction', 'time series']

dependencies	= []


[tool.setuptools]
py-modules		= ['_custom_build']


[tool.setuptools.cmdclass]
build_py		= '_custom_build.build_py'


[project.urls]
'Homepage'		= 'https://github.com/BBVA/mercury-settrie'
'Bug Tracker'	= 'https://github.com/BBVA/mercury-settrie/issues'
